word embedding added

--- a/Word_embeddings_implementation/embeddings.ipynb
+++ b/Word_embeddings_implementation/embeddings.ipynb
@@ -407,12 +407,48 @@
    "execution_count": 36
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-20T10:18:44.472889Z",
+     "start_time": "2024-12-20T10:18:44.470480Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "#implementing through transformers",
+   "id": "4c7a8ece602115d3",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "4c7a8ece602115d3"
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "#Example sentences\n",
+    "sentences = [\n",
+    "    \"The quick brown fox jumps over the lazy dog.\",\n",
+    "    \"Machine learning is a fascinating field of study.\",\n",
+    "    \"Word embeddings help in capturing semantic meanings of words.\",\n",
+    "    \"I love exploring new ideas and concepts.\",\n",
+    "    \"The weather today is quite pleasant and sunny.\"\n",
+    "]\n",
+    "\n",
+    "#Load a pre-trained model for embeddings\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "\n",
+    "#Generate embeddings\n",
+    "embeddings = model.encode(sentences)\n",
+    "\n",
+    "# Display the embeddings\n",
+    "for i, sentence in enumerate(sentences):\n",
+    "    print(f\"Sentence: {sentence}\")\n",
+    "    print(f\"Embedding: {embeddings[i][:5]}...\")  #Display first 5 dimensions for brevity\n",
+    "    print()\n"
+   ],
+   "id": "f5f6bda1f3311fe1"
   }
  ],
  "metadata": {
